[package]
name = "pse-poseidon"
version = "0.2.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
digest = "0.10.7"
halo2curves-axiom = { git = "https://github.com/axiom-crypto/halo2curves.git" }
subtle = { version = "2.3", default-features = false }
typenum = "1.17.0"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }
paste = "1.0.7"
